--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -409,8 +409,8 @@ Navigator.generalTab.tab.mnemonic=G
 Navigator.generalTab.tab.title=General
 Navigator.getting.started=Getting Started
 Navigator.initialized=Initialized Navigator
-Navigator.install.update.version=<html><body><p>An ELS update is available.</p><p>&nbsp;</p><p>Installed: <b>{0}</b></p><p>&nbsp;&nbsp;Update: <b>{1}</b></p><p>&nbsp;</p><p>Update and restart?</p></body></html>
-Navigator.install.new.version=<html><body><p>An ELS update is available.</p><p>&nbsp;</p><p>Installed: <b>{0}</b></p><p>&nbsp;&nbsp;Update: <b>{1}</b></p><p>&nbsp;</p></body></html>
+Navigator.install.new.version=<html><body><p>An ELS update is available.</p><p>&nbsp;</p><p>Installed: <b>{0}</b></p><p>&nbsp;Update: <b>{1}</b></p><p>&nbsp;</p></body></html>
+Navigator.install.update.version=<html><body><p>An ELS update is available.</p><p>&nbsp;</p><p>Installed: <b>{0}</b></p><p>&nbsp;Update: <b>{1}</b></p><p>&nbsp;</p><p>Update and restart?</p></body></html>
 Navigator.installed.up.to.date=ELS is up-to-date
 Navigator.labelCase.text=Case-sensitive\:
 Navigator.labelFlavor.text=Flavor\:
@@ -557,8 +557,6 @@ Navigator.menu.View.mnemonic=V
 Navigator.menu.View.text=View
 Navigator.menu.Windows.mnemonic=W
 Navigator.menu.Windows.text=Window
-Navigator.menuItemWebSite.mnemonic=W
-Navigator.menuItemWebSite.text=Web Site
 Navigator.menuItemAuthKeys.mnemonic=A
 Navigator.menuItemAuthKeys.text=Authentication Keys ...
 Navigator.menuItemAutoRefresh.mnemonic=A
@@ -609,6 +607,8 @@ Navigator.menuItemSleep.mnemonic=S
 Navigator.menuItemSleep.text=Sleep ...
 Navigator.menuItemUpdates.mnemonic=U
 Navigator.menuItemUpdates.text=Check for updates ...
+Navigator.menuItemWebSite.mnemonic=W
+Navigator.menuItemWebSite.text=Web Site
 Navigator.menuItemWhitelist.mnemonic=W
 Navigator.menuItemWhitelist.text=Whitelist ...
 Navigator.menuItemWordWrap.mnemonic=W
@@ -918,6 +918,7 @@ Settings.button.dateInfo.text=Help
 Settings.date.format.help.title=Date Format Help
 Settings.date.format.not.valid=The date format is not valid
 Settings.dateFormatLabel.text=Date format\:
+Settings.default.dry.runLabel.text=Default dry-run\:
 Settings.defaultAccentButton.text=Default
 Settings.defaultAccentButton.toolTipText=Default accent color
 Settings.error.changing.look.n.feel=Error changing Look 'n Feel: 
@@ -930,19 +931,16 @@ Settings.lookFeelLabel.text=Look 'n Feel\:
 Settings.preserveFileTimestampsLabel.text=Preserve file timestamps\:
 Settings.scaleCheckBox.toolTipText=Uncheck for decimal (1000 K) scale
 Settings.scaleLabel.text=Binary (1024 K) scale\:
-Settings.showArrowseLabel.text=Show up/down arrows\:
-Settings.showMnemonicsLabel.text=Show mnemonics\:
 Settings.select.accent.color=Select Accent Color
+Settings.showArrowseLabel.text=Show up/down arrows\:
 Settings.showCcpConfirmationLabel.text=Confirm copy/cut/paste\:
 Settings.showDeleteConfirmationLabel.text=Confirm delete\:
 Settings.showDndConfirmationLabel.text=Confirm drag 'n drop\:
+Settings.showMnemonicsLabel.text=Show mnemonics\:
 Settings.showTouchConfirmationLabel.text=Confirm touch\:
-Settings.default.dry.runLabel.text=Default dry-run\:
 Settings.sortCaseSensitiveLabel.text=Sort case-insensitive\:
 Settings.sortFoldersBeforeFilesLabel.text=Sort folders before files\:
 Settings.sortReverseLabel.text=Sort reverse\:
-Settings.uselastPubSubCheckBox.toolTipText=Use the previous publisher and/or subscriber if not specified
-Settings.useLastPubSubLabel.text=Use last publisher/subscriber\:
 Settings.tabPlacement.bottom=Bottom
 Settings.tabPlacement.left=Left
 Settings.tabPlacement.right=Right
@@ -950,6 +948,8 @@ Settings.tabPlacement.top=Top
 Settings.tabPlacementLabel.text=Tab placement\:
 Settings.textField.HintButtonColor.toolTipText=RGB color in hex, i.e. FF009F. Clear to use default.
 Settings.this.title=Navigator Settings
+Settings.useLastPubSubLabel.text=Use last publisher/subscriber\:
+Settings.uselastPubSubCheckBox.toolTipText=Use the previous publisher and/or subscriber if not specified
 Sleep.displayName=Sleep
 Sleep.help=Sleep Help
 Sleep.labelTime.text=Sleep time in minutes\:  
@@ -991,6 +991,7 @@ Transfer.would.mv.directory.file=\  > Would mv {0, choice, 0#directory |1#file }
 Transfer.would.rm.directory=\  > Would rm directory: 
 Transfer.would.rm.file=\  > Would rm file: 
 Updater.action.cancelled=action cancelled
+Updater.application.path.not.writable=Installation path not writable. Please install ELS to a writable location to update it.
 Updater.bytes.read.and.bytes.decompressed=Bytes read: {0} and bytes decompressed: {1} do not match, archive corrupted on {2}
 Updater.commandline=commandLine: 
 Updater.copy=copy: 
@@ -1081,4 +1082,3 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
-Updater.application.path.not.writable=Installation path not writable. Please install ELS to a writable location to update it.
