--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -1119,7 +1119,7 @@ HintsUI.status.unknown=Missing or error
 HintsUI.help=Hints Help
 Navigator.open.hint.tracking.to.see.hints=Open Hint Tracking to see Hints
 Navigator.open.hint.keys.and.hint.tracking.to.see.hints=Open Hint Keys and Hint Tracking to see Hints
-HintsUI.hints.for={0} Hints, {1} Systems.  {2} Hints for {3}, {4} for {5}
+HintsUI.hints.for={0} Hints, {1} Systems.  {2} for {3}, {4} for {5}
 HintsUI.hints.selected=\ Hints selected
 HintsUI.are.you.sure.you.want.to.delete=Are you sure you want to delete {0} Hint(s)?
 Z.select.collection.for.run=Please select a Collection for Run
