#117 Hints are for collections only, not to be run on a 'workstation'

--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -1123,6 +1123,7 @@ HintsUI.hints.selected=\ Hints selected
 HintsUI.are.you.sure.you.want.to.delete=Are you sure you want to delete {0} Hint(s)?
 Z.select.collection.for.run=Please select a Collection for Run
 HintsUI.run.tool.on.collection=<html><body>Run selected Hints on the <b>{0} Collection</b>?<br/><br/><b>This cannot be undone.</b></body></html>
+HintsUI.not.workstation=Hints are not run on a workstation publisher
 HintsUI.select.open=Please select an open collection
 HintsUI.no.selected.hints.pending.for=Selected Hints For {0} are Done
 HintsUI.hints.run.complete=Hints Run Complete:\ 
