#117 Deployment of Hint redesign and many other changes

--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -128,6 +128,42 @@ Generator.shortcut.title=Create Desktop Shortcut
 Generator.shortcut.tooltip=Create desktop shortcut
 Generator.shortcut=Shortcut ...
 Generator.warning.command.line.may.be.too.long=Warning: Command line may be too long
+HintsUI.action.delete=Delete
+HintsUI.action.move=Move
+HintsUI.action.rename=Rename
+HintsUI.are.you.sure.you.want.to.delete=Are you sure you want to delete {0} Hint(s)?
+HintsUI.buttonAll.mnemonic=A
+HintsUI.buttonAll.text=All
+HintsUI.buttonAll.toolTipText=Select all
+HintsUI.buttonDelete.text=Delete
+HintsUI.buttonDelete.toolTipText=Delete selected Hints
+HintsUI.buttonNone.mnemonic=N
+HintsUI.buttonNone.text=None
+HintsUI.buttonNone.toolTipText=Select none
+HintsUI.buttonRun.mnemonic=R
+HintsUI.buttonRun.text=Run ...
+HintsUI.buttonRun.toolTipText=Execute selected Hints
+HintsUI.header.action=Action
+HintsUI.header.author=By
+HintsUI.header.from.item=From Item
+HintsUI.header.from.library=From Library
+HintsUI.header.system=System
+HintsUI.header.to.item=To Item
+HintsUI.header.to.library=To Library
+HintsUI.header.utc=Date
+HintsUI.help=Hints Help
+HintsUI.hints.for={0} Hints, {1} Systems.  {2} for {3}, {4} for {5}
+HintsUI.hints.run.complete=Hints Run Complete:\ 
+HintsUI.hints.selected=\ Hints selected
+HintsUI.labelHelp.toolTipText=Hints Help
+HintsUI.no.selected.hints.pending.for=Selected Hints For {0} are Done
+HintsUI.not.workstation=Hints are for collections only
+HintsUI.run.tool.on.collection=<html><body>Run selected Hints on the <b>{0} Collection</b>?<br/><br/><b>This cannot be undone.</b></body></html>
+HintsUI.select.open=Please select an open collection
+HintsUI.status.done=Done
+HintsUI.status.for=For
+HintsUI.status.unknown=Missing or error
+HintsUI.this.title=Hints
 Job.completed.job=Job 
 Job.config.cancelled=Job {0} cancelled
 Job.continuing.job=Continuing job\: 
@@ -362,10 +398,10 @@ Navigator.buttonHintServer.disabled.tooltip=Hints disabled
 Navigator.buttonHintServer.enabled.tooltip=Hints enabled
 Navigator.buttonHintServer.text=\ Hint Server
 Navigator.buttonHintTracking.disabled.tooltip=Hints disabled
+Navigator.buttonHintTracking.enabled.tooltip=Hints enabled
 Navigator.buttonHintTracking.mnemonic=N
 Navigator.buttonHintTracking.text=\ Hint Tracker
 Navigator.buttonHintTracking.toolTipText=Hints enabled
-Navigator.buttonHintTracking.enabled.tooltip=Hints enabled
 Navigator.buttonLibrariesAddIgnore.mnemonic=A
 Navigator.buttonLibrariesAddIgnore.text=Add
 Navigator.buttonLibrariesAddIgnore.toolTipText=Add an ignore pattern
@@ -389,9 +425,6 @@ Navigator.buttonUpSource.toolTipText=Move source up
 Navigator.cancelButton.mnemonic_2=U
 Navigator.cannot.find.executable=Cannot find ELS executable:\ 
 Navigator.changes.help.title=Current Build Changelist
-Navigator.menuItemHints.mnemonic=H
-Navigator.menuItemHints.text=Hints ...
-Navigator.menuItemShowToolbar.text=Show Toolbar
 Navigator.controls.help.title=Navigator Controls
 Navigator.delete.bookmarks=Delete Bookmarks
 Navigator.detected.local.system.as=Detected local system as 
@@ -405,6 +438,7 @@ Navigator.error.writing.hint=Error writing Hint:
 Navigator.generalTab.tab.mnemonic=G
 Navigator.generalTab.tab.title=General
 Navigator.getting.started=Getting Started
+Navigator.hints.available=Hints available
 Navigator.initialized=Initialized Navigator
 Navigator.install.new.version=<html><body><p>An ELS update is available.</p><p>&nbsp;</p><table><tr><td>Installed:</td><td>{0}</td></tr><tr><td>Update:</td><td>{1}</td></tr><table></body></html>
 Navigator.install.update.version=<html><body><p>An ELS update is available.</p><p>&nbsp;</p><table><tr><td>Installed:</td><td>{0}</td></tr><tr><td>Update:</td><td>{1}</td></tr><table><p>Update and restart?</p></body></html>
@@ -588,6 +622,8 @@ Navigator.menuItemGettingStarted.text=Getting Started ...
 Navigator.menuItemGitHubProject.mnemonic=P
 Navigator.menuItemHintKeys.mnemonic_2=K
 Navigator.menuItemHintKeys.text=Hint Keys ...
+Navigator.menuItemHints.mnemonic=H
+Navigator.menuItemHints.text=Hints ...
 Navigator.menuItemIssue.displayedMnemonicIndex=7
 Navigator.menuItemIssue.mnemonic=I
 Navigator.menuItemIssue.text=Submit Issue
@@ -600,6 +636,7 @@ Navigator.menuItemQuitTerminate.mnemonic=R
 Navigator.menuItemRefresh.mnemonic=F
 Navigator.menuItemReleaseNotes.mnemonic=R
 Navigator.menuItemReleaseNotes.text=Release Notes ...
+Navigator.menuItemShowToolbar.text=Show Toolbar
 Navigator.menuItemSleep.mnemonic=S
 Navigator.menuItemSleep.text=Sleep ...
 Navigator.menuItemUpdates.mnemonic=U
@@ -615,12 +652,12 @@ Navigator.menuTbCopy.text=Copy
 Navigator.menuTbCopy.toolTipText=Copy selected items
 Navigator.menuTbCut.text=Cut
 Navigator.menuTbCut.toolTipText=Cut selected items
-Navigator.menuTbPaste.text=Paste
-Navigator.menuTbPaste.toolTipText=Paste selected items
 Navigator.menuTbDelete.text=Delete
 Navigator.menuTbDelete.toolTipText=Delete selected items
 Navigator.menuTbNewFolder.text=New Folder
 Navigator.menuTbNewFolder.toolTipText=Create New Folder in current location
+Navigator.menuTbPaste.text=Paste
+Navigator.menuTbPaste.toolTipText=Paste selected items
 Navigator.menuTbRefresh.text=Refresh
 Navigator.menuTbRefresh.toolTipText=Refresh current location
 Navigator.newFolder.free=\ free
@@ -628,6 +665,7 @@ Navigator.open.error.directory.not.writable=Directory not writable:
 Navigator.open.error.file.not.found=File not found: 
 Navigator.open.error.file.not.writable=File not writable: 
 Navigator.open.error.select.a.file.only=Select a file only
+Navigator.open.hint.tracking.to.see.hints=Open Hint Tracking to see Hints
 Navigator.panel.CollectionOne.tab.mnemonic=1
 Navigator.panel.CollectionOne.tab.title=Publisher 1
 Navigator.panel.CollectionTwo.tab.mnemonic=3
@@ -684,7 +722,6 @@ Navigator.starting.els.updater=Starting ELS Updater:\
 Navigator.textFieldLocation.toolTipText=Location
 Navigator.unpacking=Unpacking
 Navigator.update.available=ELS update available
-Navigator.hints.available=Hints available
 Navigator.update.failed=<html><body>The update <b>failed</b>. See {0} for information.</body></html>
 Navigator.update.info.not.found=Update information not found: {0}
 Navigator.update.status=Update Status
@@ -1076,6 +1113,7 @@ Z.run.cancelled=Run cancelled
 Z.save.toolTip.text=Save all changes
 Z.save=Save
 Z.scanning=Scanning ...
+Z.select.collection.for.run=Please select a Collection for Run
 Z.skipping.child=Skipping {0} child of {1} 
 Z.skipping=Skipping 
 Z.stop.run.after.scan=Stop run after scan?
@@ -1089,41 +1127,3 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
-HintsUI.buttonAll.mnemonic=A
-HintsUI.buttonAll.text=All
-HintsUI.buttonAll.toolTipText=Select all
-HintsUI.buttonNone.mnemonic=N
-HintsUI.buttonNone.text=None
-HintsUI.buttonNone.toolTipText=Select none
-HintsUI.buttonDelete.text=Delete
-HintsUI.buttonDelete.toolTipText=Delete selected Hints
-HintsUI.buttonRun.mnemonic=R
-HintsUI.buttonRun.text=Run ...
-HintsUI.buttonRun.toolTipText=Execute selected Hints
-HintsUI.labelHelp.toolTipText=Hints Help
-HintsUI.this.title=Hints
-HintsUI.header.system=System
-HintsUI.header.author=By
-HintsUI.header.utc=Date
-HintsUI.header.action=Action
-HintsUI.header.from.library=From Library
-HintsUI.header.from.item=From Item
-HintsUI.header.to.library=To Library
-HintsUI.header.to.item=To Item
-HintsUI.action.delete=Delete
-HintsUI.action.move=Move
-HintsUI.action.rename=Rename
-HintsUI.status.done=Done
-HintsUI.status.for=For
-HintsUI.status.unknown=Missing or error
-HintsUI.help=Hints Help
-Navigator.open.hint.tracking.to.see.hints=Open Hint Tracking to see Hints
-HintsUI.hints.for={0} Hints, {1} Systems.  {2} for {3}, {4} for {5}
-HintsUI.hints.selected=\ Hints selected
-HintsUI.are.you.sure.you.want.to.delete=Are you sure you want to delete {0} Hint(s)?
-Z.select.collection.for.run=Please select a Collection for Run
-HintsUI.run.tool.on.collection=<html><body>Run selected Hints on the <b>{0} Collection</b>?<br/><br/><b>This cannot be undone.</b></body></html>
-HintsUI.not.workstation=Hints are not run on a workstation publisher
-HintsUI.select.open=Please select an open collection
-HintsUI.no.selected.hints.pending.for=Selected Hints For {0} are Done
-HintsUI.hints.run.complete=Hints Run Complete:\ 
