#117 Fixed Hint button and Hint file handling bugs

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -394,14 +394,11 @@ Navigator.buttonDelete.text=Delete ...
 Navigator.buttonDelete.toolTipText=Delete a collection
 Navigator.buttonDownSource.toolTipText=Move source down
 Navigator.buttonForward.toolTipText=Forward (Alt-Right)
-Navigator.buttonHintServer.disabled.tooltip=Hints disabled
-Navigator.buttonHintServer.enabled.tooltip=Hints enabled
+Navigator.buttonHint.disabled.tooltip=Hints disabled
+Navigator.buttonHint.enabled.tooltip=Hints enabled
 Navigator.buttonHintServer.text=\ Hint Server
-Navigator.buttonHintTracking.disabled.tooltip=Hints disabled
-Navigator.buttonHintTracking.enabled.tooltip=Hints enabled
 Navigator.buttonHintTracking.mnemonic=N
 Navigator.buttonHintTracking.text=\ Hint Tracker
-Navigator.buttonHintTracking.toolTipText=Hints enabled
 Navigator.buttonLibrariesAddIgnore.mnemonic=A
 Navigator.buttonLibrariesAddIgnore.text=Add
 Navigator.buttonLibrariesAddIgnore.toolTipText=Add an ignore pattern
