--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -1124,4 +1124,4 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
-Hints.the.current.key.was.not.found.in.hint.keys.file=The current {0} key was not found in Hint Keys file: {1}
+Hints.the.current.key.was.not.found.in.hint.keys.file=The current {0} key was not found in file: {1}
