--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -743,7 +743,7 @@ OperationsUI.buttonOperationAddExclude.toolTipText=Add a library to exclude
 OperationsUI.buttonOperationAddIncludeExclude.mnemonic=A
 OperationsUI.buttonOperationAddIncludeExclude.text=Add
 OperationsUI.buttonOperationAddIncludeExclude.toolTipText=Add a library to include or exclude
-OperationsUI.buttonOperationAuthKeysFilePick.toolTipText=Select Auth Keys File
+OperationsUI.buttonOperationAuthKeysFilePick.toolTipText=Select Authentication Keys File
 OperationsUI.buttonOperationBlacklistFilePick.toolTipText=Select Blacklist File
 OperationsUI.buttonOperationBlacklistFilePick3.toolTipText=Select Blacklist File
 OperationsUI.buttonOperationExportItemsFilePick.toolTipText=Export Items Output File
@@ -751,10 +751,10 @@ OperationsUI.buttonOperationExportTextFilePick.toolTipText=Export Text Output Fi
 OperationsUI.buttonOperationHintKeysFilePick.toolTipText=Select Hint Keys File
 OperationsUI.buttonOperationHintKeysFilePick2.toolTipText=Select Hint Keys File
 OperationsUI.buttonOperationHintKeysFilePick3.toolTipText=Select Hint Keys File
-OperationsUI.buttonOperationHintsFilePick.toolTipText=Select Hints/Server File
-OperationsUI.buttonOperationHintsFilePick2.toolTipText=Select Hints/Server File
-OperationsUI.buttonOperationHintsFilePick3.toolTipText=Select Hints/Server File
-OperationsUI.buttonOperationHintsFilePick6.toolTipText=Select Hints/Server File
+OperationsUI.buttonOperationHintsFilePick.toolTipText=Select Hint Tracker/Server File
+OperationsUI.buttonOperationHintsFilePick2.toolTipText=Select Hint Tracker/Server File
+OperationsUI.buttonOperationHintsFilePick3.toolTipText=Select Hint Tracker/Server File
+OperationsUI.buttonOperationHintsFilePick6.toolTipText=Select Hint Tracker/Server File
 OperationsUI.buttonOperationIpWhitelistFilePick.toolTipText=Select Whitelist File
 OperationsUI.buttonOperationIpWhitelistFilePick3.toolTipText=Select Whitelist File
 OperationsUI.buttonOperationMismatchesFilePick.toolTipText=Mismatches Output File
@@ -792,7 +792,7 @@ OperationsUI.checkBoxOperationValidate.toolTipText=Validate the publisher JSON f
 OperationsUI.comboBoxOperationHintKeys.0.keys=Hint keys\:
 OperationsUI.comboBoxOperationHintKeys.1.keysOnly=Hint keys, only\:
 OperationsUI.comboBoxOperationHintKeys.prototypeDisplayValue=Hint keys, only
-OperationsUI.comboBoxOperationHintsAndServer.0.hints=Hints\:
+OperationsUI.comboBoxOperationHintsAndServer.0.hints=Hint Tracker\:
 OperationsUI.comboBoxOperationHintsAndServer.1.hintServer=Hint Server\:
 OperationsUI.comboBoxOperationHintsAndServer.prototypeDisplayValue=Hint Server\:
 OperationsUI.comboBoxOperationHintsAndServer2.prototypeDisplayValue=Hint Server\:
@@ -815,7 +815,7 @@ OperationsUI.help=Operations Help
 OperationsUI.include.selections=Include selections
 OperationsUI.include=Include: 
 OperationsUI.is.a.duplicate=\ is a duplicate
-OperationsUI.labelOperationAuthKeys.text=Auth keys\:
+OperationsUI.labelOperationAuthKeys.text=Authentication keys\:
 OperationsUI.labelOperationAuthorize.text=Authorize password\:
 OperationsUI.labelOperationBlacklist.text=Blacklist\:
 OperationsUI.labelOperationBlacklist3.text=Blacklist\:
