#122 Minor UI changes

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -97,7 +97,7 @@ FileEditor.overwrite.existing.uuid=Overwrite existing Key?
 FileEditor.please.select.a.single.row.to.update=Please select a single row to update
 FileEditor.read.ip.addresses.0.successfully=Read IP addresses {0} successfully
 FileEditor.remove.entries=Remove {0} entries?
-FileEditor.select.collection.uuid=Select Collection Key
+FileEditor.select.library.uuid=Select Library Key
 FileEditor.that.collection.uuid.key.is.already.defined=That Collection Key is already defined
 FileEditor.there.are.no.collections.to.choose.from=There are no Collections to choose from
 FileEditor.whitelist=Whitelist
@@ -152,7 +152,7 @@ HintsUI.header.to.item=To Item
 HintsUI.header.to.library=To Library
 HintsUI.header.utc=Date
 HintsUI.help=Hints Help
-HintsUI.hints.for={0} Hints, {1} Systems.  {2} for {3}, {4} for {5}
+HintsUI.hints.for={0} Hints, {1} Libraries.  {2} for {3}, {4} for {5}
 HintsUI.hints.run.complete=Hints Run Complete:\ 
 HintsUI.hints.selected=\ Hints selected
 HintsUI.labelHelp.toolTipText=Hints Help
@@ -633,6 +633,7 @@ Navigator.menuItemQuitTerminate.mnemonic=R
 Navigator.menuItemRefresh.mnemonic=F
 Navigator.menuItemReleaseNotes.mnemonic=R
 Navigator.menuItemReleaseNotes.text=Release Notes ...
+Navigator.menuItemShowToolbar.mnemonic=T
 Navigator.menuItemShowToolbar.text=Show Toolbar
 Navigator.menuItemSleep.mnemonic=S
 Navigator.menuItemSleep.text=Sleep ...
@@ -1114,7 +1115,6 @@ Z.select.collection.for.run=Please select a Collection for Run
 Z.skipping.child=Skipping {0} child of {1} 
 Z.skipping=Skipping 
 Z.stop.run.after.scan=Stop run after scan?
-Z.subscriber.disconnected=Subscriber disconnected
 Z.subscriber=Subscriber
 Z.that.configuration.already.exists=That configuration already exists
 Z.to=\ to 
@@ -1125,3 +1125,4 @@ Z.would.rename=Would rename:
 Z.yes=Yes
 jobs.displayName=Job
 Hints.the.current.key.was.not.found.in.hint.keys.file=The current {0} key was not found in file: {1}
+HintsUI.hint.tracker.server.not.enabled=Hint Tracker/Server not enabled
