--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -263,6 +263,7 @@ Libraries.checkBoxTempDated.toolTipText=Add dates to temporary files
 Libraries.checkBoxTerminalAllowed.toolTipText=If an ELS terminal is allowed\nto connect to this collection
 Libraries.comboBoxFlavor.toolTipText=Which operating system is being\non the system with this collection
 Libraries.generate.new.uuid.for=Generate new Key for: 
+Libraries.help=Libraries Help
 Libraries.hint.server=Hint Server
 Libraries.labelBiblioLibraries.text=Libraries
 Libraries.libraries.changes.cancelled=Changes cancelled
