#122 Fixed help flutter (again); Added Settings options; working on auto-refresh

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -2,7 +2,7 @@
 # Default and en_US locale
 #
 # Trailing spaces are IMPORTANT, some lines have multiple spaces.
-# "Z." items are shared.
+# "Z." items are shared. Named Z to sort to the bottom.
 #
 # // TODO Clean-up and optimize. Too many duplications and minor differences
 #
@@ -128,6 +128,7 @@ Generator.shortcut.title=Create Desktop Shortcut
 Generator.shortcut.tooltip=Create desktop shortcut
 Generator.shortcut=Shortcut ...
 Generator.warning.command.line.may.be.too.long=Warning: Command line may be too long
+Hints.the.current.key.was.not.found.in.hint.keys.file=The current {0} key was not found in file: {1}
 HintsUI.action.delete=Delete
 HintsUI.action.move=Move
 HintsUI.action.rename=Rename
@@ -143,6 +144,7 @@ HintsUI.buttonNone.toolTipText=Select none
 HintsUI.buttonRun.mnemonic=R
 HintsUI.buttonRun.text=Run ...
 HintsUI.buttonRun.toolTipText=Execute selected Hints
+HintsUI.current.key.was.not.found.in.hint.keys=Key for {0} was not found in Hint Keys
 HintsUI.header.action=Action
 HintsUI.header.author=By
 HintsUI.header.from.item=From Item
@@ -152,6 +154,7 @@ HintsUI.header.to.item=To Item
 HintsUI.header.to.library=To Library
 HintsUI.header.utc=Date
 HintsUI.help=Hints Help
+HintsUI.hint.tracker.server.not.enabled=Hint Tracker/Server not enabled
 HintsUI.hints.for={0} Hints, {1} Libraries.  {2} for {3}, {4} for {5}
 HintsUI.hints.run.complete=Hints Run Complete:\ 
 HintsUI.hints.selected=\ Hints selected
@@ -588,8 +591,6 @@ Navigator.menu.Windows.mnemonic=W
 Navigator.menu.Windows.text=Window
 Navigator.menuItemAuthKeys.mnemonic=A
 Navigator.menuItemAuthKeys.text=Authentication Keys ...
-Navigator.menuItemAutoRefresh.mnemonic=A
-Navigator.menuItemAutoRefresh.text=Auto-Refresh
 Navigator.menuItemBlacklist.mnemonic=B
 Navigator.menuItemBlacklist.text=Blacklist ...
 Navigator.menuItemChangelist.mnemonic=L
@@ -703,6 +704,9 @@ Navigator.popupMenuItemRefresh.text=Refresh
 Navigator.popupMenuItemTop.mnemonic=T
 Navigator.popupMenuItemTop.text=Top
 Navigator.preferences.saved=Preferences saved
+Navigator.radioButtonAutoRefresh.text=Auto-Refresh
+Navigator.radioButtonBatch.mnemonic=B
+Navigator.radioButtonBatch.text=Batch Actions
 Navigator.recent.changes=Changelist
 Navigator.release.notes=Release Notes
 Navigator.saveButton.mnemonic=O
@@ -971,11 +975,13 @@ Settings.error.changing.look.n.feel=Error changing Look 'n Feel:
 Settings.generalPanel.tab.mnemonic=G
 Settings.generalPanel.tab.title=General
 Settings.hideFilesInTreeLabel.text=Hide files in tree\:
+Settings.generateLongOptionsCheckBox.toolTipText=Use long options, e.g. --navigator, instead of short options, e.g. -n, in the Generate dialog
+Settings.generateLongOptionsLabel.text=Generate long options\:
 Settings.localeLabel.text=Locale\:
 Settings.lookFeelLabel.text=Look 'n Feel\:
 Settings.preserveFileTimestampsLabel.text=Preserve file timestamps\:
-Settings.scaleCheckBox.toolTipText=Uncheck for decimal (1000 K) scale
-Settings.scaleLabel.text=Binary (1024 K) scale\:
+Settings.scaleCheckBox.toolTipText=Uncheck for binary (1024 K) scale size values
+Settings.scaleLabel.text=Decimal (1000 K) scale\:
 Settings.select.accent.color=Select Accent Color
 Settings.showArrowseLabel.text=Show up/down arrows\:
 Settings.showCcpConfirmationLabel.text=Confirm copy/cut/paste\:
@@ -993,6 +999,8 @@ Settings.tabPlacement.top=Top
 Settings.tabPlacementLabel.text=Tab placement\:
 Settings.textField.HintButtonColor.toolTipText=RGB color in hex, i.e. FF009F. Clear to use default.
 Settings.this.title=Navigator Settings
+Settings.tooltipLargeTableCheckBox.toolTipText=Show table tooltips on everything > 1000 rows
+Settings.tooltipLargeTableLabel.text=Tooltips on large tables\:
 Settings.useLastPubSubLabel.text=Use last publisher/subscriber\:
 Settings.uselastPubSubCheckBox.toolTipText=Use the previous publisher and/or subscriber if not specified
 Sleep.displayName=Sleep
@@ -1125,5 +1133,3 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
-Hints.the.current.key.was.not.found.in.hint.keys.file=The current {0} key was not found in file: {1}
-HintsUI.hint.tracker.server.not.enabled=Hint Tracker/Server not enabled
