--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -1046,8 +1046,8 @@ Updater.application.path.not.writable=Installation path not writable. Please ins
 Updater.bytes.read.and.bytes.decompressed=Bytes read: {0} and bytes decompressed: {1} do not match, archive corrupted on {2}
 Updater.commandline=commandLine: 
 Updater.copy=copy: 
+Updater.downloading=Updater Downloading
 Updater.download.and.unpack.of.els.successful=download and unpack of ELS successful
-Updater.downloading=downloading: 
 Updater.installed.path=installedPath: 
 Updater.mounting.update=mounting update:\ 
 Updater.preferences=preferences: 
@@ -1084,7 +1084,7 @@ Z.deleted=Deleted:
 Z.done.toolTipText=Close this dialog
 Z.done=Done
 Z.dont.ask.again=Don't ask again
-Z.downloading=Downloading
+Z.downloading=Downloading Updater
 Z.dry.run=\ (dry-run)
 Z.error.downloading=Error downloading:\ 
 Z.error.parsing=Error parsing\: 
@@ -1133,3 +1133,4 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
+ClientStty.forcing.request.of.collection.with.s=Forcing request of collection
