#122 Extended the Progress dialog with dual progress bars and reworked Cancel handling

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -30,6 +30,7 @@ Browser.system=System
 BrowserTable.column.modified=Modified
 BrowserTable.column.name=Name
 BrowserTable.column.size=Size
+ClientStty.forcing.request.of.collection.with.s=Forcing request of collection
 DuplicateFinder.action=Action
 DuplicateFinder.analyzing.library=Analyzing library 
 DuplicateFinder.buttonRun.mnemonic=R
@@ -339,7 +340,11 @@ NavTransferHandler.get=Get
 NavTransferHandler.move=Move
 NavTransferHandler.moved=Moved
 NavTransferHandler.nothing.to.do=Nothing to do
-NavTransferHandler.progress.of=\ of 
+NavTransferHandler.progress.file=File
+NavTransferHandler.progress.of=of
+NavTransferHandler.progress.total=Total
+NavTransferHandler.progressBarFile.toolTipText=Current file
+NavTransferHandler.progressBarTotal.toolTipText=Total to transfer
 NavTransferHandler.put=Put 
 NavTransferHandler.skipping.system.item=Skipping System item\: 
 NavTransferHandler.source.target.are.the.same=Source & target are the same
@@ -972,9 +977,9 @@ Settings.defaultAccentButton.toolTipText=Default accent color
 Settings.error.changing.look.n.feel=Error changing Look 'n Feel: 
 Settings.generalPanel.tab.mnemonic=G
 Settings.generalPanel.tab.title=General
-Settings.hideFilesInTreeLabel.text=Hide files in tree\:
 Settings.generateLongOptionsCheckBox.toolTipText=Use long options, e.g. --navigator, instead of short options, e.g. -n, in the Generate dialog
 Settings.generateLongOptionsLabel.text=Generate long options\:
+Settings.hideFilesInTreeLabel.text=Hide files in tree\:
 Settings.localeLabel.text=Locale\:
 Settings.lookFeelLabel.text=Look 'n Feel\:
 Settings.preserveFileTimestampsLabel.text=Preserve file timestamps\:
@@ -1044,8 +1049,8 @@ Updater.application.path.not.writable=Installation path not writable. Please ins
 Updater.bytes.read.and.bytes.decompressed=Bytes read: {0} and bytes decompressed: {1} do not match, archive corrupted on {2}
 Updater.commandline=commandLine: 
 Updater.copy=copy: 
-Updater.downloading=Updater Downloading
 Updater.download.and.unpack.of.els.successful=download and unpack of ELS successful
+Updater.downloading=Updater Downloading
 Updater.installed.path=installedPath: 
 Updater.mounting.update=mounting update:\ 
 Updater.preferences=preferences: 
@@ -1131,4 +1136,3 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
-ClientStty.forcing.request.of.collection.with.s=Forcing request of collection
