--- a/src/com/corionis/els/locales/bundle_en_US.properties
+++ b/src/com/corionis/els/locales/bundle_en_US.properties
@@ -1026,6 +1026,7 @@ Transfer.no.space.on.any.target.location=No space on any target location of {0} 
 Transfer.no.subdirectory.in.path=No subdirectory in path: 
 Transfer.no.target.library.match.found.for.library=No target library match found for library 
 Transfer.of.complete=Transfer of {0} complete
+Transfer.of.cancelled=Transfer of {0} cancelled
 Transfer.original.storage.location.too.full=Original storage location too full for {0} {1} at {2}
 Transfer.previous.directory.was.not.empty=\  ! Directory was not empty: 
 Transfer.publisher.data.incomplete.missing.flavor=Publisher data incomplete, missing 'flavor'
