#122 Added transfer statistics reporting; Added better wait cursor handling

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -885,7 +885,8 @@ OperationsUI.select.included.excluded.libraries=Select included/excluded librari
 OperationsUI.stop.running.operation=Stop running operation?
 OperationsUI.subscriber.libraries=Subscriber libraries
 OperationsUI.uncheck.to.exclude.selections=Uncheck to exclude selections
-Progress.buttonCancel.text_2=Cancel
+Progress.buttonClose.text=Close
+Progress.buttonCancel.text=Cancel
 Progress.not.active=No processes active
 Progress.title.dryrun=Dry-Run Progress
 Progress.title=ELS Progress
@@ -1074,6 +1075,7 @@ Z.cancel.changes.toolTipText=Discard all changes
 Z.cancel.changes=Cancel Changes
 Z.cancel.download=Cancel Download
 Z.cancel.run=Cancel Run
+Z.cancel.current.operation=Cancel the current operation
 Z.cancel.the.current.operation=Cancel the current operation?
 Z.cancel=Cancel
 Z.cancelled=\ cancelled
@@ -1137,3 +1139,4 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
+Browser.items.selected=\ items selected, 
