#122 Added --marker "arg" option to aid with scripting; Fixed Libraries, General tab size bug

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -411,10 +411,11 @@ Navigator.buttonHintTracking.text=\ Hint Tracker
 Navigator.buttonLibrariesAddIgnore.mnemonic=A
 Navigator.buttonLibrariesAddIgnore.text=Add
 Navigator.buttonLibrariesAddIgnore.toolTipText=Add an ignore pattern
-Navigator.buttonLibrariesRemoveIgnore.mnemonic_2=M
+Navigator.buttonLibrariesRemoveIgnore.mnemonic=M
 Navigator.buttonLibrariesRemoveIgnore.text=Remove ...
 Navigator.buttonLibrariesRemoveIgnore.toolTipText=Delete one or more ignore patterns
 Navigator.buttonLibraryGenerateKey.toolTipText=Generate Key
+Navigator.buttonLibrarySelectTempLocation.toolTipText=Select Temporary Files Location
 Navigator.buttonNew.mnemonic=N
 Navigator.buttonNew.text=New
 Navigator.buttonNew.toolTipText=Add a new collection
@@ -431,6 +432,10 @@ Navigator.buttonUpSource.toolTipText=Move source up
 Navigator.cancelButton.mnemonic_2=U
 Navigator.cannot.find.executable=Cannot find ELS executable:\ 
 Navigator.changes.help.title=Current Build Changelist
+Navigator.checkBoxCase.toolTipText=If filenames should be handled as case-sensitive
+Navigator.checkBoxTempDated.toolTipText=Add dates to temporary files
+Navigator.checkBoxTerminalAllowed.toolTipText=If an ELS terminal is allowed\nto connect to this collection
+Navigator.comboBoxFlavor.toolTipText=Which operating system is being\non the system with this collection
 Navigator.controls.help.title=Navigator Controls
 Navigator.delete.bookmarks=Delete Bookmarks
 Navigator.detected.local.system.as=Detected local system as 
@@ -441,27 +446,28 @@ Navigator.els.update.process.cancelled=ELS Update process cancelled
 Navigator.error.launching.browser=Error launching browser
 Navigator.error.launching.els.updater=Error launching ELS Updater:\ 
 Navigator.error.writing.hint=Error writing Hint: 
-Navigator.generalTab.tab.mnemonic=G
-Navigator.generalTab.tab.title=General
+Navigator.generalTab.mnemonic=G
+Navigator.generalTab.title=General
 Navigator.getting.started=Getting Started
 Navigator.hints.available=Hints available
 Navigator.initialized=Initialized Navigator
 Navigator.install.new.version=<html><body><p>An ELS update is available.</p><p>&nbsp;</p><table><tr><td>Installed:</td><td>{0}</td></tr><tr><td>Update:</td><td>{1}</td></tr><table></body></html>
 Navigator.install.update.version=<html><body><p>An ELS update is available.</p><p>&nbsp;</p><table><tr><td>Installed:</td><td>{0}</td></tr><tr><td>Update:</td><td>{1}</td></tr><table><p>Update and restart?</p></body></html>
 Navigator.installed.up.to.date=ELS is up-to-date
-Navigator.labelCase.text=Case-sensitive\:
-Navigator.labelFlavor.text=Flavor\:
-Navigator.labelHost.text=Host\:
-Navigator.labelIgnores.text=Ignore patterns\:
+Navigator.labelOperationGettingStarted.text=Click the New button to define parameters for a library
 Navigator.labelKey.text=Key\:
-Navigator.labelLibrariesGettingStarted.text=Click the New button to define parameters for a library
+Navigator.labelHost.text=Host\:
 Navigator.labelListen.text=Listen\:
-Navigator.labelSources.text=Sources
 Navigator.labelTempDated.text=Temporary files dated\:
 Navigator.labelTempLocation.text=Temporary files location\:
-Navigator.labelTerminal.Allowed.text=Terminal allowed\:
+Navigator.labelTerminalAllosed.text=Terminal allowed\:
 Navigator.labelTimeout.text=Time-out (minutes)\:
+Navigator.labelFlavor.text=Flavor\:
+Navigator.labelCase.text=Case-sensitive\:
+Navigator.labelIgnores.text=Ignore patterns\:
+Navigator.labelSources.text=Sources
 Navigator.libraries=\ libraries
+Navigator.listLibrariesIgnorePatterns.toolTipText=File patterns to ignore\nusing regular expressions.\n\nSee Libraries Help for details.
 Navigator.locationsTab.tab.mnemonic=L
 Navigator.locationsTab.tab.title=Locations
 Navigator.menu.About.mnemonic=A
@@ -717,6 +723,7 @@ Navigator.scanning.publisher=Scanning publisher
 Navigator.scanning.subscriber=Scanning subscriber
 Navigator.scrollPane.Log.tab.title=Log
 Navigator.scrollPane.Properties.tab.title=Properties
+Navigator.scrollPaneGeneral.tab.title=text
 Navigator.scrollPaneLog.tab.mnemonic_2=L
 Navigator.scrollPaneProperties.tab.mnemonic_2=O
 Navigator.secondary,context=Log appender updated 
@@ -725,6 +732,11 @@ Navigator.splitPane.Browser.tab.title=Browser
 Navigator.splitPane.Libraries.tab.mnemonic=I
 Navigator.splitPane.Libraries.tab.title=Libraries
 Navigator.starting.els.updater=Starting ELS Updater:\ 
+Navigator.textFieldKey.toolTipText=A version 4 UUID. Use the Generate button.
+Navigator.textFieldHost.toolTipText=For remote Navigators and Publishers. The\n"outside" hostname or IP address & port to\nconnect to this  library.\n\nExample\:  fuzzywuzzybear.com\:50271
+Navigator.textFieldListen.toolTipText=For remote Navigators and Publishers. The\n"inside" hostname or IP address & port to\nconnect to this  library.\n\nExample\:  plex.fuzzywuzzybear.com\:50271
+Navigator.textFieldTempLocation.toolTipText=Directory for temporary file
+Navigator.textFieldTimeout.toolTipText=Time-out period. Useful when waiting\nfor a remote system to scan collection
 Navigator.textFieldLocation.toolTipText=Location
 Navigator.unpacking=Unpacking
 Navigator.update.available=ELS update available
